adding box model style to the project

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ div {
   outline-color: rgba(122, 15, 122, 0.533);
   font-size: 40px;
   display: inline-block;
+  margin: 10px;
   padding: 5px;
 }
 
